crates/nash-ir/src/analysis/snapshots/nash_ir__analysis__tests__branch_and_suspension_scopes.snap
---
source: crates/nash-ir/src/analysis/tests.rs
assertion_line: 75
expression: found
---
Occurrences {
    bindings: [
        Binding {
            name: Name {
                text: "x",
                unique: 1,
            },
            execution_scope: [
                Lambda(
                    0,
                ),
            ],
        },
        Binding {
            name: Name {
                text: "p",
                unique: 2,
            },
            execution_scope: [
                Lambda(
                    0,
                ),
                Branch {
                    node: 1,
                    index: Some(
                        0,
                    ),
                },
            ],
        },
    ],
    uses: [
        Occurrence {
            name: Name {
                text: "x",
                unique: 1,
            },
            binding: Some(
                0,
            ),
            node: 2,
            scope: [
                0,
            ],
            execution_scope: [
                Lambda(
                    0,
                ),
            ],
        },
        Occurrence {
            name: Name {
                text: "x",
                unique: 1,
            },
            binding: Some(
                0,
            ),
            node: 4,
            scope: [
                0,
                1,
            ],
            execution_scope: [
                Lambda(
                    0,
                ),
                Branch {
                    node: 1,
                    index: Some(
                        0,
                    ),
                },
                Delay(
                    3,
                ),
            ],
        },
        Occurrence {
            name: Name {
                text: "p",
                unique: 2,
            },
            binding: None,
            node: 6,
            scope: [
                0,
            ],
            execution_scope: [
                Lambda(
                    0,
                ),
                Branch {
                    node: 1,
                    index: Some(
                        1,
                    ),
                },
            ],
        },
        Occurrence {
            name: Name {
                text: "x",
                unique: 1,
            },
            binding: Some(
                0,
            ),
            node: 7,
            scope: [
                0,
            ],
            execution_scope: [
                Lambda(
                    0,
                ),
                Branch {
                    node: 1,
                    index: None,
                },
            ],
        },
    ],
}
